# kcpu

./: .cloc_lang_def.txt  .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  kasm  kasm.cpp  main  main.cpp  todo.txt  udisasm  udisasm.cpp
asm/: bios.kasm  fibb.kasm  prog.kasm  prog.old.kasm
benches/: suites.rs
crate/kcpu/: Cargo.toml
crate/kcpu/asm/bench/: FIXME
crate/kcpu/asm/test/: alu.ks  alu_noflags.ks  auto.ks  byte_ld.ks  byte_st.ks  double_constant.ks  enter_leave.ks  int_async.ks  int_during_io.ks  int_multiple.ks  int_nmi.ks  int_nmi_no_eoi.ks  int_simple.ks  jmp.ks  ldwo.ks  old_test.ks  primes.ks  pushpop.ks  pushpop_rsp.ks  simple.ks
crate/kcpu/src/: asm.rs  assembler.rs  common.rs  frontend.rs  lib.rs  main.rs  vm.rs
crate/kcpu/src/asm/: lang.rs  model.rs
crate/kcpu/src/asm/defs/: alias.rs  family.rs
crate/kcpu/src/assembler/: conductor.rs  defs.rs  disasm.rs  disassembler.cpp  disassembler.hpp  generate.rs  lang.rs  model.rs  parse.rs  phases.rs  preprocess.rs  resolve.rs  token.rs  tokenize.rs  types.rs
crate/kcpu/src/assembler/defs/: alias.rs  family.rs
crate/kcpu/src/assembler/phases/: generate.rs  parse.rs  resolve.rs  tokenize.rs  types.rs
crate/kcpu/src/frontend/: assemble.rs  assets.rs  command.rs  execute.rs  run.rs  run_suite.rs  suite.rs
crate/kcpu/src/frontend/run/: debug.rs  execute.rs
crate/kcpu/src/spec/: types.rs  ucode.rs
crate/kcpu/src/spec/defs/: inst.rs  opclass.rs  usig.rs
crate/kcpu/src/spec/types/: hw.rs  schema.rs
crate/kcpu/src/vm/: alu.rs  ctl.rs  instance.rs  interface.rs  mem.rs  reg.rs  types.rs
crate/kcpu/src/vm/io/: ioc.rs  manager.rs  types.rs
crate/kcpu/src/vm/io/dev/: pic.rs  probe.rs  uid.rs  video.cpp
crate/kcpu/src/vm/io/dev/test/: jumpers.rs  slow_ints.rs  slow_regs.rs
crate/kcpu/src/vm/lib/graphics/: sdl2_renderer.hpp
crate/kcpu/tests/: arg_bindings.rs  inst.rs  suite.rs
crate/kcpu/tests/common/: macros.rs
crate/kcpu/tests/suite/: macros.rs  main.rs
sandbox/: prog.kasm  prog.ks
src/: assets.rs  common.rs  except.cpp  except.hpp  frontend.rs  lib.rs  main.rs  types.h  types.hpp
test/: default.bios.kasm
tests/: arg_bindings.rs  (+6 more)
(+254 files in other folders)
