[package]
name = "kcpu"
version = "0.1.0"
authors = ["Keeley Hoek <keeley@hoek.io>"]
edition = "2018"
default-run = "kcpu"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
big_tests = []

[[bench]]
name = "suites"
harness = false

[dev-dependencies]
criterion = "0.3.2"

[dependencies]
bitflags = "1.2.1"
enum-map = "0.6.2"
static_assertions = "1.1.0"
num-traits = "0.2.11"
num-derive = "0.3.0"
once_cell = "1.3.1"
derive_more = "0.99.5"
bitintr = "0.3.0"
strum = "0.18.0"
strum_macros = "0.18.0"
structopt = "0.3.14"
itertools = "0.9.0"
ansi_term = "0.12.1"
